[gd_scene load_steps=6 format=3 uid="uid://cax3s66k3k1lv"]

[ext_resource type="Script" path="res://NodeCube/corner_piece.gd" id="1_hobql"]

[sub_resource type="PlaneMesh" id="PlaneMesh_qej3m"]
size = Vector2(0.333, 0.333)

[sub_resource type="PlaneMesh" id="PlaneMesh_k8b3x"]
size = Vector2(0.333, 0.333)

[sub_resource type="PlaneMesh" id="PlaneMesh_ommn1"]
size = Vector2(0.333, 0.333)

[sub_resource type="SphereShape3D" id="SphereShape3D_e6t2o"]
radius = 0.15

[node name="CornerPiece" type="Node3D"]
script = ExtResource("1_hobql")

[node name="TopPiece" type="CSGMesh3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.167, 2.08165e-12)
mesh = SubResource("PlaneMesh_qej3m")

[node name="FrontPiece" type="CSGMesh3D" parent="."]
transform = Transform3D(1, 0, -1.5246e-23, -1.5246e-23, -4.37114e-08, -1, 0, 1, -4.37114e-08, 2.08165e-12, 2.08165e-12, 0.167)
mesh = SubResource("PlaneMesh_k8b3x")

[node name="RightPiece" type="CSGMesh3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 3.48787e-16, -1, -4.37114e-08, -3.48787e-16, -3.48787e-16, -3.48787e-16, 1, 0.167, 2.08165e-12, 2.08165e-12)
mesh = SubResource("PlaneMesh_ommn1")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_e6t2o")
